--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,8 @@
 <footer>
     <ul>
-    	<li>youremail@youremail.com</li>
+    	<li>lukeshi2017@u.northwestern.edu</li>
     	<li>2145 Sheridan Rd., Evanston, IL, 60201</li>
-    	<li>(123) 456-7890</li>
+    	<li>(224) 723-6820</li>
     </ul>
 </footer>
 
