--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,10 @@
 <header>
     <nav>
-    	<a href="{{ site.baseurl }}/"><h1>My Portfolio</h1></a>
+    	<a href="{{ site.baseurl }}/"><h1>Luke Shi's Portfolio</h1></a>
     	<ul>
     		<li><a href="{{ site.baseurl }}/">Portfolio</a></li>
     		<li><a href="{{ site.baseurl }}/about/">About</a></li>
+            <li><a href="{{ site.baseurl }}//public/images/Luke_Shi_Resume.odt/">Resume</a></li>
     		<li><a href="{{ site.baseurl }}/contact/">Contact</a></li>
     	</ul>
     </nav>
