--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,7 +3,7 @@
 
 	
 	<script type="text/javascript"
-			src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+			src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
 	</script>
 
 	<title>{{ site.title }}</title>
